--- a/now.json
+++ b/now.json
@@ -7,16 +7,13 @@
     }],
     "routes": [
         {
-            "src": "(.*).js",
-            "dest": "/$1.js"
+            "src": "(.*).js", "dest": "/$1.js"
         },
         {
-            "src": "(.*).json",
-            "dest": "/$1.json"
+            "src": "(.*).json", "dest": "/$1.json"
         },
         {
-            "src": "/.*",
-            "dest": "index.html"
+            "src": "/.*", "dest": "index.html"
         }
     ]
 }
