--- a/api/now.json
+++ b/api/now.json
@@ -1,7 +1,5 @@
 {
   "version": 2,
-  "name": "petgram-server-tovim",
-  "alias": ["petgram-api-tovim"],
   "builds": [{ "src": "index.js", "use": "@now/node" }],
   "routes": [{
     "headers": {
@@ -9,6 +7,6 @@
         "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
         "Access-Control-Allow-Headers": "X-Requested-With, Content-Type, Accept"
     },
-    "src": "/.*", "dest": "index.js" }
+    "src": "/", "dest": "index.js" }
   ]
 }
